fix bottom nav alignment

--- a/themes/shawndo_2025/assets/css/main.css
+++ b/themes/shawndo_2025/assets/css/main.css
@@ -235,6 +235,7 @@ header {
 
 .prevnext {
   display: flex;
+  justify-content: space-between;
   border-top: 1px solid var(--secondaryColor);
   padding: .5rem 0;
 }
@@ -245,7 +246,6 @@ header {
   font-family: Verdana, Arial, sans-serif;
   font-size: 1rem;
   text-decoration: none;
-  width: 50%;
 }
 
 .prevnext a:nth-child(2) {
@@ -254,20 +254,14 @@ header {
 
 .prevnext a:first-child::before {
   content: url('/css/left-arrow.svg');
-  height: 1.5em;
-  width: 1.5em;
-  display: inline-block;
-  vertical-align: -30%;
-  padding-right: 1rem;
+  width: 1.4em;
+  padding-right: .5rem;
 }
 
 .prevnext a:nth-child(2)::after {
   content: url('/css/right-arrow.svg');
-  height: 1.5em;
-  width: 1.5em;
-  display: inline-block;
-  vertical-align: -30%;
-  padding-left: 1rem;
+  width: 1.4em;
+  padding-left: .5rem;
 }
 
 /* --------------------------------------------------------- */
